@@ -347,15 +347,26 @@ $td->runtest("check C API write to JSON stream",
 # (using #xx) would generate invalid JSON, even though qpdf's own JSON
 # parser would accept it. Also, the JSON spec allows real numbers in
 # scientific notation, but the PDF spec does not.
-$n_tests += 2;
+$n_tests += 4;
 $td->runtest("handle binary names",
              {$td->COMMAND =>
                   "qpdf --json-output weird-tokens.pdf a.json"},
              {$td->STRING => "", $td->EXIT_STATUS => 0});
-# Round-trip is tested above.
+# Round-trip back to PDF is tested above.
 $td->runtest("check json",
              {$td->FILE => "a.json"},
              {$td->FILE => "weird-tokens.json"},
+             $td->NORMALIZE_NEWLINES);
+# Make sure we can properly handle JSON with scientific notation.
+$td->runtest("weird tokens round trip json",
+             {$td->COMMAND =>
+                  "qpdf --json-input --json-output weird-tokens.json -"},
+             {$td->FILE => "weird-tokens.json", $td->EXIT_STATUS => 0},
+             $td->NORMALIZE_NEWLINES);
+$td->runtest("weird tokens with scientific notation",
+             {$td->COMMAND =>
+                  "qpdf --json-input --json-output weird-tokens-alt.json -"},
+             {$td->FILE => "weird-tokens.json", $td->EXIT_STATUS => 0},
              $td->NORMALIZE_NEWLINES);
 
 cleanup();
